<resources>
    <string name="app_name">DistanceTrackerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_text">Continue</string>
    <string name="permission_description">Welcome to Distance Tracker. In order to use our application we will first need to request location permissions from you.Otherwise we will not be able to provide you with our services. </string>
    <string name="permission_required">Permission Required</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="tap_of_my_location_button">Tap of My Location Button.</string>
    <string name="distance">Distance</string>
    <string name="_0_0km">0.0km</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="share">Share</string>
    <string name="result">%1$s km</string>
</resources>